Fix Horizontal Scroll Bar

--- a/css/style.css
+++ b/css/style.css
@@ -591,6 +591,7 @@ i.fa-solid.fa-info {
     width: 100%;
     display: flex;
     flex-direction: row;
+    
 }
 
 .ListContainer {
@@ -598,7 +599,7 @@ i.fa-solid.fa-info {
     flex-direction: column;
     width: 33%;
     height: 163px;
-    padding: 20px 20px 0 20px;
+    padding: 20px;
     gap: 15px;
 }
 
@@ -627,8 +628,19 @@ i.fa-solid.fa-info {
     .ListContainer {
         justify-content: center;
         width: 100%;
-        padding:0;
-        margin-left: 30px;
+        padding: 0;
+    }
+
+    .ListContainer p {
+        padding-left: 30px;
+    }
+
+    .ListContainer ul {
+        padding-left: 30px;
+    }
+
+    .ListContainer li {
+        padding-left: 30px;
     }
 
 }
